Added mobile styling - MVP reached

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,9 +6,9 @@
     align-items: @align;
 }
 
-.create-btn(@width,@bkg,@txt){
+.create-btn(@width,@bkg,@txt,@pad:0.87rem){
     width:@width;
-    padding: 0.87rem 0;
+    padding: @pad 0;
     background: @bkg;
     color: @txt;
     font-size: 1.8rem;
