--- a/less/navigation.less
+++ b/less/navigation.less
@@ -26,5 +26,8 @@ nav{
                 color: lighten(@river-bend, 40%);
             }
         }
+        @media @phone{
+            width: 80%;
+        }
     }
 }
