--- a/css/index.css
+++ b/css/index.css
@@ -189,6 +189,11 @@ nav .links a {
 nav .links a:hover {
   color: #acb0be;
 }
+@media (max-width:500px) {
+  nav .links {
+    width: 80%;
+  }
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -206,6 +211,7 @@ footer {
   padding: 0 15px;
 }
 .home .intro img {
+  width: 100%;
   border-radius: 5px;
 }
 .home .space-images {
@@ -218,6 +224,14 @@ footer {
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width:500px) {
+  .home .space-images img {
+    width: 90%;
+  }
+  .home .space-images img:not(:first-child) {
+    display: none;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -235,8 +249,21 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width:500px) {
+  .home .walk {
+    flex-direction: column-reverse;
+    padding: 20px 20px;
+    margin-top: 20px;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width:500px) {
+  .home .walk .walk-text {
+    width: 100%;
+    margin-top: 20px;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -264,9 +291,37 @@ footer {
   text-align: center;
   border-radius: 5px;
 }
+@media (max-width:500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    padding: 2.5rem 0;
+    background: #22283A;
+    color: #F6F6F6;
+    font-size: 1.8rem;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 5px;
+  }
+  .home .walk .walk-text .btn:hover {
+    width: 100%;
+    padding: 2.5rem 0;
+    background: #F6F6F6;
+    color: #22283A;
+    font-size: 1.8rem;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 5px;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width:500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin: 0;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
