--- a/less/home-page.less
+++ b/less/home-page.less
@@ -13,6 +13,7 @@
     }
 
     img{
+      width: 100%;
       border-radius: 5px;
     }
   
@@ -28,6 +29,14 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media @phone{
+        width: 90%;
+
+        &:not(:first-child){
+          display: none;
+        }
+      }
     }
   }
 
@@ -50,8 +59,18 @@
     display: flex;
     justify-content: center;
 
+    @media @phone{
+      flex-direction: column-reverse;
+      padding: 20px 20px;
+      margin-top: 20px;
+    }
+
     .walk-text {
       width: 50%;
+      @media @phone{
+        width: 100%;
+        margin-top: 20px;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -66,12 +85,22 @@
         &:hover{
           .create-btn(29.5%,@wild-sand,@btn-bg-color);
         }
+        @media @phone {
+          .create-btn(100%,@btn-bg-color,@wild-sand, 2.5rem);
+          &:hover{
+            .create-btn(100%,@wild-sand,@btn-bg-color,2.5rem);
+          }     
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone{
+        width: 100%;
+        margin:0;
+      }
       
       img {
         width: 100%;
