--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,6 +4,10 @@ nav{
     background: @wild-sand;
     color: @river-bend;
     border: 1px solid @sea-shell;
+    position:fixed;
+    top:0;
+    width:100%;
+    opacity: 0.9;
 
     .logo{
         font-size: 4em;
