--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,5 @@
 // Variables
 
-@phone: ~'(max-width:500px)';
-
 // Color pointers
 @nav-bg: @wild-sand;
 @nav-font: @river-bend;
@@ -26,3 +24,53 @@
 @border-real: #dee2e6;
 
 // Mobile var
+@phone: ~'(max-width:500px)';
+
+// Animations
+
+.keyframes(slideDown,{
+    from{
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    to{
+        opacity:1;
+        transform: translateY(0);
+    }
+    
+});
+.keyframes(slideUp,{
+    from{
+        opacity: 0;
+        transform: translateY(100%);
+    }
+    to{
+        opacity:1;
+        transform: translateY(0);
+    }
+    
+});
+
+.keyframes(slideLeft,{
+    from{
+        opacity: 0;
+        transform: translateX(100%);
+    }
+    to{
+        opacity:1;
+        transform: translateX(0);
+    }
+    
+});
+
+.keyframes(slideRight,{
+    from{
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+    to{
+        opacity:1;
+        transform: translateX(0);
+    }
+    
+});
