--- a/less/variables.less
+++ b/less/variables.less
@@ -74,3 +74,11 @@
     }
     
 });
+.keyframes(shineText,{
+    0%{
+      background-position: -500%;
+    }
+    100%{
+      background-position: 500%;
+    }
+});
