--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,6 +1,5 @@
 // Navigation code here
 nav{
-    text-align: center;
     background: @wild-sand;
     color: @river-bend;
     border: 1px solid @sea-shell;
@@ -8,11 +7,26 @@ nav{
     top:0;
     width:100%;
     opacity: 0.9;
+    z-index: 1;
 
     .logo{
+        margin: 0;
+        padding: 0;
         font-size: 4em;
         margin-top: 1.2rem;
         margin-bottom: 1.5rem;
+        .flex-setup(row,center,center);
+        h1{
+            position: relative;
+            overflow: hidden;
+            color: @wild-sand;
+            background: linear-gradient(80deg, @wild-sand, @river-bend, @wild-sand);
+            background-repeat: no-repeat;
+            background-size: 80%;
+            animation: shineText 2s linear infinite;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: rgba(0, 0, 0, 0);
+        }
     }
 
     .links{
